--- a/package.json
+++ b/package.json
@@ -9,11 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@number-flow/react": "^0.5.10",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
+    "@supabase/supabase-js": "^2.56.0",
+    "@tabler/icons-react": "^3.34.1",
+    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
@@ -22,12 +39,17 @@
     "maath": "^0.10.8",
     "motion": "^12.23.12",
     "next": "15.4.5",
+    "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-use-measure": "^2.1.7",
+    "recharts": "2.15.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "vaul": "^1.1.2",
+    "zod": "^4.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
